--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
+    "react-modern-drawer": "^1.2.2",
     "react-router-dom": "^6.16.0",
     "sort-by": "^0.0.2"
   },
